# people

./: Cargo.toml  Makefile  README.md  docker-compose.yml  people.json
data/: sample-data.sql
migrations/: 20230917172957_people_table.up.sql  20230917183452_pets_table.up.sql  20231008111136_add_person_last_name.down.sql  20231008111136_add_person_last_name.up.sql  20231008113331_update_person_name.down.sql  20231008113331_update_person_name.up.sql  20231014212848_create_accounts_table.up.sql  20231021194324_make_user_email_unique.down.sql  20231021194324_make_user_email_unique.up.sql
src/: main.rs
src/application/: app.rs
src/censors/: censor.rs  mod.rs
src/errors/: error.rs
src/people/: censor.rs  handler.rs  handler_tests.rs  mod.rs  service.rs  service_test.rs  storage.rs
src/storage/: db.rs  memory.rs  memory_tests.rs  mod.rs
src/types/: accounts.rs  mod.rs  pagination.rs  pagination_tests.rs  people.rs  pets.rs
src/users/: handler.rs  handler_test.rs  mod.rs  service.rs  service_test.rs  storage.rs
