[package]
name = "people"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.1"
hyper = "0.14.27"