[package]
name = "people"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
hyper = "0.14.27"
log = { version = "0.4.20", features = ["kv_unstable"] }
env_logger = "0.10.0"
log4rs = "1.2.0"
uuid = { version = "1.4.1", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
async-trait = "0.1.73"
reqwest = { version = "0.11.20", features = ["json"] }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
